--- a/static/styles/lib/loggedin.critical.scss
+++ b/static/styles/lib/loggedin.critical.scss
@@ -1,14 +1,38 @@
+@import './colors';
 @import "./bootstrap/scss/_variables";
 @import "./bootstrap/scss/mixins/_breakpoints";
 @import "./components/layout";
 @import "./components/sidebar";
 @import "./components/topbar";
 @import "./components/footer";
+@import "./components/preload-screen.critical";
 
 .content-wrapper {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    width: calc(100vw - 240px);
+    height: 100vh;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    padding: 0;
+
+    @include media-breakpoint-down(md) {
+        width: calc(100vw - 60px);
+    }
+
+    @include media-breakpoint-down(xs) {
+        width: 100vw;
+    }
     .school-data {
         padding-top: 11px;
     }
+    .federal-state {
+        padding-top: 10px;
+        height: 35px;
+        margin-left: 8px !important;
+    }
+
     .section-default {
         width: 100%;
         float: left;
@@ -27,10 +51,25 @@
     }
 }
 
-.section-title{
+.section-title {
     width: 100%;
     padding: 10px 0px 20px;
     line-height: 1.75rem;
+
+    h4 {
+        color: $primaryColor;
+        float: left;
+        margin-bottom: 0px;
+        margin-right: 20px;
+        font-weight: bold;
+    }
+
+    .location-info {
+        float: left;
+        a {
+            color: $accentColor;
+        }
+    }
 
     .search-wrapper {
         float: right;
@@ -51,6 +90,7 @@
             line-height: 50px;
             text-align: center;
             cursor: pointer;
+
         }
 
         @include media-breakpoint-down(xs) {
@@ -62,6 +102,7 @@
 
             .input-group {
                 display: none;
+                white-space: nowrap;
                 .search-field{
                     width: calc(100% - 33px);
                     display: inline-block;
@@ -80,29 +121,25 @@
             }
         }
     }
-
-    h4 {
-        color: $primaryColor;
-        float: left;
-        margin-bottom: 0px;
-        margin-right: 20px;
-        font-weight: bold;
-    }
-
-    .location-info {
-        float: left;
-        a {
-            color: $accentColor;
-        }
-    }
 }
 .pagination-wrapper {
     text-align: center;
     width: 100%;
 }
+
+/* ---- special --- */
+
 @media (max-width: 1024px) {
     .intro-trigger {
         display: none;
+    }
+}
+
+@include media-breakpoint-down(xs) {
+    .topbar + .section-title {
+        border-bottom: 1px solid #ddd;
+        padding: 10px 0px;
+        margin-bottom: 25px;
     }
 }
 
