--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -47,6 +47,9 @@
                     <div class="modal-body">
                         <div id="member-modal-body">
                         </div>
+                        {{#userHasPermission "COURSE_EDIT"}}
+                        <div id='course-edit'></div>
+                        {{/userHasPermission}}
                     </div>
                 {{/content}}
             {{/embed}}
