more tests, explanation text
worked for me in all tests (without nexboard)

--- a/views/courses/forms/form-import-topic.hbs
+++ b/views/courses/forms/form-import-topic.hbs
@@ -1,5 +1,7 @@
 <div class="form-group">
-    <label for="invitation">Fügen Sie hier einen Code ein, den Sie von einem Lehrer-Kollegen erhalten haben.</label>
+    <label for="invitation">Füge einen Code ein, um Themen anderer Nutzer zu importieren. Im Thema enthaltene Dateien werden in deinem Kursordner abgelegt.</label>
     <input class="form-control" name="shareToken" type="text" />
     <input class="form-control" hidden name="courseId" />
+    <p><br/>Achtung: Tausche im Thema enthaltene, mit Nutzerdaten befüllte Tools (z.B. NexBoard, Etherpad, GeoGebra) nachträglich manuell aus, da Änderungen daran sich sonst auf den Original-Kurs auswirken!
+    </p>
 </div>
