--- a/views/administration/dataprivacy/student.hbs
+++ b/views/administration/dataprivacy/student.hbs
@@ -9,13 +9,12 @@
   {{/content}}
 
   {{#content "page"}}
-  <div class="form">
+  <div class="form sections-5">
     <input id="section-1" type="radio" name="stage" checked="checked" />
     <input id="section-2" type="radio" name="stage" />
     <input id="section-3" type="radio" name="stage" />
     <input id="section-4" type="radio" name="stage" />
     <input id="section-5" type="radio" name="stage" />
-    <input id="section-6" type="radio" name="stage" />
 
     <div class="stages">
       <label for="section-1">1</label>
@@ -23,7 +22,6 @@
       <label for="section-3">3</label>
       <label for="section-4">4</label>
       <label for="section-5">5</label>
-      <label for="section-6">6</label>
     </div>
 
     <span class="progressbar"></span>
@@ -146,13 +144,8 @@
 
 
 
-
       <section data-panel="section-5">
         <h4>Stage 5</h4>
-        <input type="text" placeholder="Phone Number" />
-      </section>
-      <section data-panel="section-6">
-        <h4>Stage 6</h4>
         <input type="email" placeholder="e-Mail" />
       </section>
     </form>
