some design improvements

--- a/theme/n21/style.scss
+++ b/theme/n21/style.scss
@@ -1,6 +1,7 @@
 $primaryColor: #78aae5;
 $secondaryColor: #FF0000;
 $accentColor: #b10438;
+$logoGradient: linear-gradient(45deg, $primaryColor 30%, $primaryColor);
 
 $logoBackground: url("../../images/logo/logo-wt.png") no-repeat center;
 
