--- a/static/styles/administration/progress.scss
+++ b/static/styles/administration/progress.scss
@@ -26,7 +26,7 @@ input[type="radio"] {
   font-size: 0;
   font-weight: 700;
   height: 3rem;
-  line-height: 3rem;
+  line-height: calc(3rem - 6px);
   position: relative;
   text-align: center;
   vertical-align: top;
