--- a/static/styles/administration/dataprivacy.scss
+++ b/static/styles/administration/dataprivacy.scss
@@ -2,21 +2,5 @@
 @import '../lib/colors';
 
 form.panels{
-    
-}
-
-button#prevSection{
-    border:none;
-    color: #222;
-}
-button#nextSection{
-    background: $logoGradient;
-    color: #fff;
-    border: none;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all .2s ease-in-out;
-    &:hover{
-        filter: opacity(.8);
-        box-shadow: 0 7px 28px rgba(0,0,0,0.25), 0 5px 10px rgba(0,0,0,0.22);
-    }
+    /* insert custom css for the forms here */
 }
