--- a/views/administration/dataprivacy/student.hbs
+++ b/views/administration/dataprivacy/student.hbs
@@ -9,149 +9,132 @@
   {{/content}}
 
   {{#content "page"}}
-  <div class="form sections-5">
-    <input id="section-1" type="radio" name="stage" checked="checked" />
-    <input id="section-2" type="radio" name="stage" />
-    <input id="section-3" type="radio" name="stage" />
-    <input id="section-4" type="radio" name="stage" />
-    <input id="section-5" type="radio" name="stage" />
-
-    <div class="stages">
-      <label for="section-1">1</label>
-      <label for="section-2">2</label>
-      <label for="section-3">3</label>
-      <label for="section-4">4</label>
-      <label for="section-5">5</label>
-    </div>
-
-    <span class="progressbar"></span>
-
-    <form class="panels mb-2">
-      <section data-panel="section-1">
-        <h4>Select</h4>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
-        </p>
-        <div class="row">
-          <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-            <span><Label>Geschlecht</Label>
-            <p class="text-muted" style="display: inline"> (optional)</p></span>
-            <select class="form-control form-control-lg" type="text" name="gender">
-              <option value="">Geschlecht auswählen</option>
-              <option value="male">Männlich</option>
-              <option value="female">Weiblich</option>
-              <option value="other">Anderes</option>
-            </select>
+    {{#embed "lib/forms/paginatedForm" sections=5 action="#" method="get"}}
+      {{#content "panels"}}
+        <section data-panel="section-1">
+          <h4>Select</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
+          </p>
+          <div class="row">
+            <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
+              <span><Label>Geschlecht</Label>
+              <p class="text-muted" style="display: inline"> (optional)</p></span>
+              <select class="form-control form-control-lg" type="text" name="gender">
+                <option value="">Geschlecht auswählen</option>
+                <option value="male">Männlich</option>
+                <option value="female">Weiblich</option>
+                <option value="other">Anderes</option>
+              </select>
+            </div>
+            <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
+              <span><Label>Geschlechter</Label></span>
+              <select class="form-control form-control-lg" type="text" name="genders" multiple>
+                <option value="">Geschlechter auswählen</option>
+                <option value="male">Männlich</option>
+                <option value="female">Weiblich</option>
+                <option value="other">Anderes</option>
+              </select>
+            </div>
           </div>
-          <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-            <span><Label>Geschlechter</Label></span>
-            <select class="form-control form-control-lg" type="text" name="gender" required multiple>
-              <option value="">Geschlechter auswählen</option>
-              <option value="male">Männlich</option>
-              <option value="female">Weiblich</option>
-              <option value="other">Anderes</option>
-            </select>
+        </section>
+
+
+
+
+        <section data-panel="section-2">
+          <h4>Checkbox</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
+          </p>
+          <label>
+              <input name="publicSubmissions" type="checkbox" value="public"/>
+              Schülerabgaben untereinander sichtbar
+          </label>
+        </section>
+
+
+
+
+        <section data-panel="section-3">
+          <h4>Date</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
+          </p>
+          <div class="row">
+            <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
+                <label>Bearbeitungszeitraum beginnt am:</label>
+                <input class="form-control" data-date name="dueDate" id="dueDate" type="text"/>
+            </div>
+            <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
+                <label>Bearbeitungszeitraum endet am:</label>
+                <input class="form-control" data-datetime name="dueDate" id="dueDate" type="text" value="12.06.2018"/>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
 
 
 
-      <section data-panel="section-2">
-        <h4>Checkbox</h4>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
-        </p>
-        <label>
-            <input name="publicSubmissions" type="checkbox" value="public"/>
-            Schülerabgaben untereinander sichtbar
-        </label>
-      </section>
+        <section data-panel="section-4">
+          <h4>Collapsable</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima neque esse quisquam soluta! Molestiae illum fugit alias dolorum fugiat corrupti eaque sed, nemo est laboriosam ipsum sunt ducimus dignissimos placeat?</p>
+          <div id="accordion">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h5 class="mb-0">
+                <button class="btn btn-sm btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Collapsible Group Item #1
+                </button>
+              </h5>
+            </div>
 
-
-
-
-      <section data-panel="section-3">
-        <h4>Date</h4>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
-        </p>
-        <div class="row">
-          <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-              <label>Bearbeitungszeitraum beginnt am:</label>
-              <input class="form-control" data-date name="dueDate" id="dueDate" type="text"/>
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
           </div>
-          <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-              <label>Bearbeitungszeitraum endet am:</label>
-              <input class="form-control" data-datetime name="dueDate" id="dueDate" type="text" value="12.06.2018"/>
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h5 class="mb-0">
+                <button class="btn btn-sm btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Collapsible Group Item #2
+                </button>
+              </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
           </div>
-        </div>
-      </section>
-
-
-
-
-      <section data-panel="section-4">
-        <h4>Collapsable</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima neque esse quisquam soluta! Molestiae illum fugit alias dolorum fugiat corrupti eaque sed, nemo est laboriosam ipsum sunt ducimus dignissimos placeat?</p>
-        <div id="accordion">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h5 class="mb-0">
-              <button class="btn btn-sm btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Collapsible Group Item #1
-              </button>
-            </h5>
-          </div>
-
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          <div class="card">
+            <div class="card-header" id="headingThree">
+              <h5 class="mb-0">
+                <button class="btn btn-sm btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Collapsible Group Item #3
+                </button>
+              </h5>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </div>
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h5 class="mb-0">
-              <button class="btn btn-sm btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
-              </button>
-            </h5>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button class="btn btn-sm btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
-              </button>
-            </h5>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-      </div>
-      </section>
+        </section>
 
 
 
-      <section data-panel="section-5">
-        <h4>Stage 5</h4>
-        <input type="email" placeholder="e-Mail" />
-      </section>
-    </form>
+        <section data-panel="section-5">
+          <h4>Stage 5</h4>
+          <input id="input-mail" class="linked" type="email" placeholder="e-Mail" required/>
 
-    <button id="prevSection" class="btn btn-secondary" disabled="disabled">Previous</button>
-    <button id="nextSection" class="btn btn-primary">Next</button>
-  </form>
+          <input type="email" data-from="input-mail" placeholder="e-Mail copy" disabled/>
+        </section>
+      {{/content}}
+    {{/embed}}
   {{/content}}
 {{/extend}}
