fix #topicList not defined issue, deleted console.log ...

--- a/views/lib/sc-card_additionalInfo/memberCount.hbs
+++ b/views/lib/sc-card_additionalInfo/memberCount.hbs
@@ -1,6 +1,6 @@
 {{#if this.memberAmount includeZero=true}}
-    <a href="" class="btn-member"
-       data-name="{{this.title}}"
-       data-id="{{this._id}}">
-        {{this.memberAmount}} <i class="fa fa-user"></i></a>
+    <a href="" class="btn-member" data-id="{{this._id}}">
+        {{this.memberAmount}}
+        <i class="fa fa-user"></i>
+    </a>
 {{/if}}
