--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/courses.js" type="text/javascript" defer></script>
+        <script src="/scripts/coursesOverview.js" type="text/javascript" defer></script>
     {{/content}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/courses/course.css"/>
