add some more real pages

--- a/views/administration/dataprivacy/student.hbs
+++ b/views/administration/dataprivacy/student.hbs
@@ -130,9 +130,9 @@
 
         <section data-panel="section-5">
           <h4>Stage 5</h4>
-          <input id="input-mail" class="linked" type="email" placeholder="e-Mail" required/>
+          <input id="input-mail" class="linked" type="email" name="emailobj" placeholder="e-Mail" required/>
 
-          <input type="email" data-from="input-mail" placeholder="e-Mail copy" disabled/>
+          <input type="email" data-from="emailobj" placeholder="e-Mail copy" disabled/>
         </section>
       {{/content}}
     {{/embed}}
