--- a/views/lib/forms/paginatedForm.hbs
+++ b/views/lib/forms/paginatedForm.hbs
@@ -15,6 +15,6 @@
     {{#block "panels"}}{{/block}}
   </div>
 
-  <button id="prevSection" class="btn btn-secondary" disabled="disabled">Previous</button>
-  <button id="nextSection" class="btn btn-primary" type="submit" value="Submit">Next</button>
+  <button id="prevSection" class="btn btn-secondary" disabled="disabled">Zurück</button>
+  <button id="nextSection" class="btn btn-primary" type="submit" value="Submit">Weiter</button>
 </form>
