--- a/views/lib/forms/paginatedForm.hbs
+++ b/views/lib/forms/paginatedForm.hbs
@@ -16,5 +16,6 @@
   </div>
 
   <button id="prevSection" class="btn btn-secondary" disabled="disabled">Zurück</button>
-  <button id="nextSection" class="btn btn-primary" type="submit" value="Submit">Weiter</button>
+  <button id="nextSection" class="btn btn-primary" type="submit" value="Submit" 
+    data-next-label="Weiter" data-submit-label="Absenden">Weiter</button>
 </form>
