--- a/views/administration/dataprivacy/firstLogin.hbs
+++ b/views/administration/dataprivacy/firstLogin.hbs
@@ -67,9 +67,11 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
         </p>
         
-        <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-            <label>E-Mail:</label>
-            <input class="form-control" type="email" placeholder="schueler@schul-cloud.org"></input>
+        <div class="row">
+          <div class="form-group col-md-6 col-sm-12">
+              <label>E-Mail:</label>
+              <input class="form-control" type="email" placeholder="schueler@schul-cloud.org"></input>
+          </div>
         </div>
       </section>
 
@@ -79,13 +81,15 @@
       <section data-panel="section-4">
         <h4>Du hast es fast geschafft...</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima neque esse quisquam soluta! Molestiae illum fugit alias dolorum fugiat corrupti eaque sed, nemo est laboriosam ipsum sunt ducimus dignissimos placeat?</p>
-        <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
+        <div class="row">
+          <div class="form-group col-md-6 col-sm-12">
             <label>Neues Passwort: *</label>
             <input class="form-control" name="password-1" type="password" placeholder="enter password" required/>
-        </div>
-        <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
+          </div>
+          <div class="form-group col-md-6 col-sm-12">
             <label>Wiederhole dein neues Passwort: *</label>
             <input class="form-control" name="password-2" type="password" placeholder="enter password again" required/>
+          </div>
         </div>
 
         <label>
