--- a/views/administration/dataprivacy/registration.hbs
+++ b/views/administration/dataprivacy/registration.hbs
@@ -114,32 +114,32 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
         </p>
         <label>
-            <input name="Erhebung" type="checkbox" value="true"/>
-            Einwilligung in die Erhebung
+            <input name="Erhebung" type="checkbox" value="true" required/>
+            <span>Einwilligung in die Erhebung</span>
         </label>
 
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
         </p>
         <label>
-            <input name="Forschung" type="checkbox" value="true"/>
-            Einwilligung in die Forschung
+            <input name="Forschung" type="checkbox" value="true" required/>
+            <span>Einwilligung in die Forschung</span>
         </label>
 
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
         </p>
         <label>
-            <input name="Pseudonymisierung" type="checkbox" value="true"/>
-            Einwilligung in die Pseudonymisierung
+            <input name="Pseudonymisierung" type="checkbox" value="true" required/>
+            <span>Einwilligung in die Pseudonymisierung</span>
         </label>
 
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi facilis odit totam labore asperiores accusantium quisquam blanditiis aspernatur optio esse impedit maxime cumque placeat at deleniti dolores, excepturi, ea nesciunt.
         </p>
         <label>
-            <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen"/>
-            Einwilligung in die Nutzungsbedingungen
+            <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
+            <span>Einwilligung in die Nutzungsbedingungen</span>
         </label>
 
         <p>
