--- a/views/administration/dataprivacy/registration.hbs
+++ b/views/administration/dataprivacy/registration.hbs
@@ -38,7 +38,7 @@
 
         <div class="form-group">
             <label>Geburtsdatum *</label>
-            <input class="form-control" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="dueDate" id="dueDate" type="text"/>
+            <input class="form-control" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" data-required name="dueDate" id="dueDate" type="text"/>
         </div>
 
         <div class="form-group">
@@ -95,7 +95,7 @@
         <div class="row"> 
           <div class="form-group col-md-6 col-sm-12">
               <label>Geburtsdatum</label>
-              <input class="form-control" data-date name="birthdate" type="text"/>
+              <input class="form-control"  name="birthdate" type="text"/>
           </div>
 
           <div class="form-group col-md-6 col-sm-12">
