added accidentally remove attribute

--- a/views/administration/dataprivacy/registration.hbs
+++ b/views/administration/dataprivacy/registration.hbs
@@ -95,7 +95,7 @@
         <div class="row"> 
           <div class="form-group col-md-6 col-sm-12">
               <label>Geburtsdatum</label>
-              <input class="form-control"  name="birthdate" type="text"/>
+              <input class="form-control" data-date name="birthdate" type="text"/>
           </div>
 
           <div class="form-group col-md-6 col-sm-12">
