--- a/static/styles/administration/progress.scss
+++ b/static/styles/administration/progress.scss
@@ -103,11 +103,11 @@ input[type="radio"] {
   padding: 1em 0 0;
 }
 
-button#prevSection{
+.btn-secondary{
   border:none;
   color: #222;
 }
-button#nextSection{
+.btn-primary{
   background: $logoGradient;
   color: #fff;
   border: none;
@@ -117,5 +117,9 @@ button#nextSection{
   &:hover, &:focus{
       filter: opacity(.9);
       box-shadow: 0 7px 28px rgba(0,0,0,0.25), 0 5px 10px rgba(0,0,0,0.22);
+  }
+  &:disabled{
+    opacity: .35;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
 }
